# grecal

./: .gitignore  LICENSE  README.md  generate_ics.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
data/: commemorations.yaml  feasts.yaml  names.yaml  observances.yaml
grecal/: __init__.py  _version.py  easter.py  generator.py  models.py  parser.py  rules.py
scripts/: build_site.py
tests/: test_commemorations.py  test_dataset.py  test_easter.py  test_final_calendar.py  test_generator.py  test_movable_calendar.py  test_observances.py  test_parser.py  test_rules.py  test_site_builder.py
web/: README.md  app.js  branding.json  index.html  styles.css
